--- a/code/fms/fms-mimic-shield-protect-route53-hosted-zones/cfn/auto-protect-r53-hosted-zones.yaml
+++ b/code/fms/fms-mimic-shield-protect-route53-hosted-zones/cfn/auto-protect-r53-hosted-zones.yaml
@@ -49,6 +49,11 @@ Resources:
       Path: /
   R53HostedZoneProtectionLambdaPolicy:
     Type: "AWS::IAM::Policy"
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W12
+            reason: "all resources required"
     Properties:
       PolicyName: R53HostedZoneProtectionLambdaPolicy
       PolicyDocument:
@@ -74,6 +79,15 @@ Resources:
         - !Ref R53HostedZoneProtectionLambdaRole
   R53HostedZoneProtectionLambda:
     Type: "AWS::Lambda::Function"
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W58
+            reason: "Permissions granted, CFN_Nag not parsing correctly?"
+          - id: W89
+            reason: "Not applicable for use case"
+          - id: W92
+            reason: "Not applicable for use case"
     Properties:
       Runtime: python3.7
       Role: !GetAtt R53HostedZoneProtectionLambdaRole.Arn
