--- a/code/kinesis/cfn/kinesis-deliver-stream.yaml
+++ b/code/kinesis/cfn/kinesis-deliver-stream.yaml
@@ -1,3 +1,4 @@
+---
 AWSTemplateFormatVersion: 2010-09-09
 Description: Stack for Firehose DeliveryStream S3 Destination.
 Parameters:
@@ -9,12 +10,15 @@ Parameters:
     Type: String
     Default: <na>
 Conditions:
-  KMSEncryption: !Not[!Equals[!KMSKeyArn, '<na>']]
+  KMSEncryption: !Not [ !Equals [ !Ref KMSKeyArn, "<na>" ] ]
 Resources:
   WAFDeliveryLogGroup:
     Type: AWS::Logs::LogGroup
     Properties:
       LogGroupName: /aws/kinesisfirehose
+      KmsKeyId: String
+      LogGroupName: String
+      RetentionInDays: 365
   WAFDeliveryLogStream:
     Type: AWS::Logs::LogStream
     Properties:
@@ -22,6 +26,11 @@ Resources:
       LogStreamName: !Ref WAFdeliverystream
   WAFdeliverystream:
     Type: AWS::KinesisFirehose::DeliveryStream
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W88
+            reason: "There is no Delivery Stream, these are from FMS, not applicable"
     Properties:
       DeliveryStreamName: !Sub "aws-waf-logs-delivery-${FirewallManagerAccount}-${AWS::Region}"
       ExtendedS3DestinationConfiguration:
@@ -39,3 +48,33 @@ Resources:
             AWSKMSKeyArn: !If [KMSEncryption, !Ref KMSKeyArn, !Ref "AWS::NoValue"]
         Prefix: !Sub 'firehose/${AWS::AccountId}/${AWS::Region}/'
         RoleARN: !Sub "arn:aws:iam::${AWS::AccountId}:role/KinesisFirehoseWafDeliveryRole"
+  KMSKey:
+    Type: AWS::KMS::Key
+    Properties:
+      Description: CloudWatch Log Encryption Key
+      EnableKeyRotation: true
+      PendingWindowInDays: 20
+      KeyPolicy:
+        Version: '2012-10-17'
+        Id: key-default-1
+        Statement:
+        - Sid: Enable IAM User Permissions
+          Effect: Allow
+          Principal:
+            AWS: !Sub "arn:aws:iam::${AWS::AccountId}:root"
+          Action: kms:*
+          Resource: '*'
+        - Sid: Allow administration of the key
+          Effect: Allow
+          Principal:
+            Service: !Sub "logs.${AWS::Region}.amazonaws.com"
+          Action:
+          - kms:Encrypt
+          - kms:Decrypt
+          - kms:ReEncrypt*
+          - kms:GenerateDataKey
+          - kms:Describe*
+          Resource: '*'
+          Condition:
+            ArnEquals:
+              "kms:EncryptionContext:aws:logs:arn": !GetAtt "WAFDeliveryLogGroup.Arn"
