--- a/code/kinesis/cfn/kinesis-firehose-iam-role.yaml
+++ b/code/kinesis/cfn/kinesis-firehose-iam-role.yaml
@@ -1,3 +1,4 @@
+---
 AWSTemplateFormatVersion: 2010-09-09
 Description: Stack for Firehose DeliveryStream S3 Destination.
 Parameters:
@@ -7,10 +8,16 @@ Parameters:
     Type: String
     Default: <na>
 Conditions:
-  KMSEncryption: !Not[!Equals[!KMSKeyArn, '<na>']]
+  KMSEncryption: !Not [ !Equals [ !Ref KMSKeyArn, "<na>" ] ]
+  NoKMSEncryption: !Equals [ !Ref KMSKeyArn, "<na>" ]
 Resources:
   WAFdeliveryRole:
     Type: AWS::IAM::Role
+    Metadata:
+      cfn_nag:
+        rules_to_suppress:
+          - id: W28
+            reason: "Role must have same name for wildcard resource policies to reference programatically"
     Properties:
       RoleName: KinesisFirehoseWafDeliveryRole
       AssumeRolePolicyDocument:
@@ -25,6 +32,7 @@ Resources:
               StringEquals:
                 "sts:ExternalId": !Ref "AWS::AccountId"
   WAFdeliveryPolicy:
+    Condition: KMSEncryption
     Type: AWS::IAM::Policy
     Properties:
       PolicyName: firehose_delivery_policy
@@ -48,18 +56,41 @@ Resources:
             Resource:
               - !Sub "arn:aws:s3:::${WAFLogS3Bucket}*"
               - !Sub "arn:aws:s3:::${WAFLogS3Bucket}*/*"
-          - !If
-              - KMSEncryption
-              -
-                - Effect: Allow
-                  Action:
-                    - "kms:Encrypt"
-                    - "kms:Decrypt"
-                    - "kms:ReEncrypt"
-                    - "kms:GenerateDataKey"
-                    - "kms:DescribeKey"
-                  Resource:
-                    - !Ref KMSKeyArn
-              - !Ref "AWS::NoValue"
+          - Effect: Allow
+            Action:
+              - "kms:Encrypt"
+              - "kms:Decrypt"
+              - "kms:ReEncrypt"
+              - "kms:GenerateDataKey"
+              - "kms:DescribeKey"
+            Resource:
+              - !Ref KMSKeyArn
+      Roles:
+        - !Ref WAFdeliveryRole
+  WAFdeliveryPolicy:
+    Condition: NoKMSEncryption
+    Type: AWS::IAM::Policy
+    Properties:
+      PolicyName: firehose_delivery_policy
+      PolicyDocument:
+        Version: 2012-10-17
+        Statement:
+          - Effect: Allow
+            Action:
+              - "logs:PutLogEvents"
+            Resource:
+              - !Sub "arn:aws:logs:${AWS::Region}:${AWS::AccountId}-id:log-group:KinesisFirehose:log-stream:aws-waf-logs-delivery-${AWS::AccountId}-${AWS::Region}"
+          - Effect: Allow
+            Action:
+              - "s3:AbortMultipartUpload"
+              - "s3:GetBucketLocation"
+              - "s3:GetObject"
+              - "s3:ListBucket"
+              - "s3:ListBucketMultipartUploads"
+              - "s3:PutObject"
+              - "s3:PutObjectAcl"
+            Resource:
+              - !Sub "arn:aws:s3:::${WAFLogS3Bucket}*"
+              - !Sub "arn:aws:s3:::${WAFLogS3Bucket}*/*"
       Roles:
         - !Ref WAFdeliveryRole
