2021-11-28 code sync from workshop project:

--- a/code/fms/fms-mimic-shield-protect-route53-hosted-zones/cfn/auto-protect-r53-hosted-zones.yaml
+++ b/code/fms/fms-mimic-shield-protect-route53-hosted-zones/cfn/auto-protect-r53-hosted-zones.yaml
@@ -79,6 +79,7 @@ Resources:
         - !Ref R53HostedZoneProtectionLambdaRole
   R53HostedZoneProtectionLambda:
     Type: "AWS::Lambda::Function"
+    DependsOn: R53HostedZoneProtectionLambdaPolicy
     Metadata:
       cfn_nag:
         rules_to_suppress:
