--- a/code/fms/fms-mimic-shield-protect-global-accelerator/cfn/auto-protect-global-accelerators.yaml
+++ b/code/fms/fms-mimic-shield-protect-global-accelerator/cfn/auto-protect-global-accelerators.yaml
@@ -19,23 +19,23 @@ Parameters:
   
 Resources:
   RateEvent:
-    DependsOn: R53HostedZoneProtectionLambdaPolicy
+    DependsOn: AGAProtectionLambdaPolicy
     Type: "AWS::Events::Rule"
     Properties:
       Description: CheckRoute53HostedZoneShieldProtection
       Name: Route53HostedZoneShieldProtection
       ScheduleExpression: !Ref ScheduleExpression
       Targets:
-        - Arn: !GetAtt R53HostedZoneProtectionLambda.Arn
+        - Arn: !GetAtt AGAProtectionLambda.Arn
           Id: CheckRoute53HostedZoneShieldProtection
   R53HostedZoneProtectionEventPermissions:
     Type: "AWS::Lambda::Permission"
     Properties:
-      FunctionName: !GetAtt R53HostedZoneProtectionLambda.Arn
+      FunctionName: !GetAtt AGAProtectionLambda.Arn
       Action: "lambda:InvokeFunction"
       Principal: events.amazonaws.com
       SourceArn: !GetAtt RateEvent.Arn
-  R53HostedZoneProtectionLambdaRole:
+  AGAProtectionLambdaRole:
     Type: "AWS::IAM::Role"
     Properties:
       AssumeRolePolicyDocument:
@@ -48,7 +48,7 @@ Resources:
             Action:
               - "sts:AssumeRole"
       Path: /
-  R53HostedZoneProtectionLambdaPolicy:
+  AGAProtectionLambdaPolicy:
     Type: "AWS::IAM::Policy"
     Metadata:
       cfn_nag:
@@ -77,8 +77,8 @@ Resources:
               - "shield:DeleteProtection"
             Resource: "*"
       Roles:
-        - !Ref R53HostedZoneProtectionLambdaRole
-  R53HostedZoneProtectionLambda:
+        - !Ref AGAProtectionLambdaRole
+  AGAProtectionLambda:
     Type: "AWS::Lambda::Function"
     Metadata:
       cfn_nag:
@@ -91,7 +91,7 @@ Resources:
             reason: "Not applicable for use case"
     Properties:
       Runtime: python3.7
-      Role: !GetAtt R53HostedZoneProtectionLambdaRole.Arn
+      Role: !GetAtt AGAProtectionLambdaRole.Arn
       Handler: fms/lambda/global-accelerator-protection/indexlambda_handler
       Timeout: 300
       Code:
