--- a/code/route53/healthChecks/nlb-health-check.yaml
+++ b/code/route53/healthChecks/nlb-health-check.yaml
@@ -10,7 +10,7 @@ Parameters:
       Type: String
       Default: ''
   probeResourcePath:
-      Type: String 
+      Type: String
       Default: <na>
       Description: Optional - Specify for Route 53 Probe health check to target a specific path other than the root site
   probeType:
@@ -82,8 +82,8 @@ Conditions:
   SearchStringFlag: !Or [!Equals [!Ref probeType, 'HTTPSSTRMATCH'],!Equals [!Ref probeType, 'HTTPSTRMATCH']]
   ProbePathFlag: !Not [!Equals [!Ref probeResourcePath, '<na>']]
   probePortFlag: !Not [!Equals [!Ref probePort, '<na>']]
-Mappings: 
-  ProbeMap: 
+Mappings:
+  ProbeMap:
     Port:
       "TCP": "80"
       "HTTPS": "443"
@@ -109,7 +109,7 @@ Resources:
       cfn_nag:
         rules_to_suppress:
           - id: W28
-            reason: "Alarm has a dynamically generated name unique per resources"    
+            reason: "Alarm has a dynamically generated name unique per resources"
     Properties:
       AlarmName: !Join ["-", [DDosDetected, !Select [2,!Split ["/",!Ref resourceArn]]]]
       ActionsEnabled: True
@@ -129,7 +129,7 @@ Resources:
       TreatMissingData: notBreaching
   Metric1HealthCheck:
     Type: 'AWS::Route53::HealthCheck'
-    Properties: 
+    Properties:
       HealthCheckConfig:
         Type: CLOUDWATCH_METRIC
         AlarmIdentifier:
@@ -162,9 +162,9 @@ Resources:
       Threshold: !Ref Metric1Threshold
       ComparisonOperator: GreaterThanOrEqualToThreshold
       TreatMissingData: notBreaching
-  Metric2HealthCheck: 
+  Metric2HealthCheck:
     Type: 'AWS::Route53::HealthCheck'
-    Properties: 
+    Properties:
       HealthCheckConfig:
         Type: CLOUDWATCH_METRIC
         AlarmIdentifier:
@@ -199,7 +199,7 @@ Resources:
       TreatMissingData: notBreaching
   Metric3HealthCheck:
     Type: 'AWS::Route53::HealthCheck'
-    Properties: 
+    Properties:
       HealthCheckConfig:
         Type: CLOUDWATCH_METRIC
         AlarmIdentifier:
@@ -232,9 +232,9 @@ Resources:
       Threshold: !Ref Metric3Threshold
       ComparisonOperator: GreaterThanOrEqualToThreshold
       TreatMissingData: notBreaching
-  ProbeHealthCheck: 
+  ProbeHealthCheck:
     Type: AWS::Route53::HealthCheck
-    Properties: 
+    Properties:
       HealthCheckConfig:
           Type: !FindInMap [ProbeMap, "probeTypeMap", !Ref probeType]
           ResourcePath: !If [ProbePathFlag, !Ref probeResourcePath, !Ref "AWS::NoValue"]
@@ -247,9 +247,9 @@ Resources:
       HealthCheckTags:
       - Key: Name
         Value: !Join ["-", ["Probe", !Select [2,!Split ["/",!Ref resourceArn]]]]
-  CalculatedHealthCheck: 
+  CalculatedHealthCheck:
     Type: 'AWS::Route53::HealthCheck'
-    Properties: 
+    Properties:
       HealthCheckConfig:
         Type: CALCULATED
         HealthThreshold: 3
@@ -260,7 +260,13 @@ Resources:
         - !Ref ProbeHealthCheck
       HealthCheckTags:
       - Key: Name
-        Value: !Join ["-", ["CalculatedHC", !Select [2,!Split ["/",!Ref resourceArn]]]]
+        Value: !Join ["-", ["CalculatedHC", !Select [2,!Split ["/",!Ref resourceArn]],!Select [3,!Split ["/",!Ref resourceArn]]]]
+  ShieldAssociation:
+    Type: Custom::ShieldProtectionHealthCheck
+    Properties:
+      ServiceToken: !ImportValue Route53ShieldProtectionManageLambdaFunctionArn
+      ResourceArn: !Ref resourceArn
+      CalculatedHCId: !Ref CalculatedHealthCheck
 Outputs:
   CalculatedHealthCheckId:
     Value: !Ref CalculatedHealthCheck
