--- a/code/shield/enableConfigure/cfn/shield-enable-configure.yaml
+++ b/code/shield/enableConfigure/cfn/shield-enable-configure.yaml
@@ -77,7 +77,7 @@ Resources:
       cfn_nag:
         rules_to_suppress:
           - id: W12
-            reason: "Wildcard IAM policy required"
+            reason: "Wildcard IAM policy required, resource scoping not supported for APIs"
           - id: W58
             reason: "Permissions granted, CFN_Nag not parsing correctly?"
     Properties:
@@ -94,24 +94,27 @@ Resources:
           - Sid: CreateAndManageDRTRole
             Effect: Allow
             Action:
-            - iam:GetRole
-            - iam:PassRole
-            - iam:ListAttachedRolePolicies
-            - iam:CreateRole
-            - iam:AttachRolePolicy
+              - iam:GetRole
+              - iam:PassRole
+              - iam:ListAttachedRolePolicies
+              - iam:CreateRole
+              - iam:AttachRolePolicy
             Resource: !Sub "arn:aws:iam::${AWS::AccountId}:role/AWSDRTAccess"
           - Sid: ShieldAdvancedConfiguration
             Effect: Allow
             Action:
-            - shield:UpdateEmergencyContactSettings
-            - shield:AssociateDRTLogBucket
-            - shield:CreateSubscription
-            - shield:UpdateSubscription
-            - shield:AssociateDRTRole
-            - shield:DescribeDRTAccess
-            - shield:EnableProactiveEngagement
-            - shield:DisableProactiveEngagement
-            - shield:AssociateProactiveEngagementDetails
+              - shield:UpdateEmergencyContactSettings
+              - shield:AssociateDRTLogBucket
+              - shield:CreateSubscription
+              - shield:UpdateSubscription
+              - shield:AssociateDRTRole
+              - shield:DisassociateDRTRole
+              - shield:DescribeDRTAccess
+              - shield:EnableProactiveEngagement
+              - shield:DisableProactiveEngagement
+              - shield:AssociateProactiveEngagementDetails
+              - "xray:PutTraceSegments"
+              - "xray:PutTelemetryRecords"
             Resource: "*"
       Roles:
         - !Ref ConfigureShieldLambdaRole
@@ -139,6 +142,8 @@ Resources:
           - id: W92
             reason: "Not applicable for use case"
     Properties:
+      TracingConfig:
+        Mode: Active
       Runtime: python3.9
       Role: !GetAtt ConfigureShieldLambdaRole.Arn
       Handler: shield/enableConfigure/lambda/index.lambda_handler
